Adding Loggers to important classes and Code Formatting
