# src/main/java/com/pennyquin/healthframework/controller/AuthenticationController.java
@@ -2,10 +2,11 @@ package com.pennyquin.healthframework.controller;
 
 import com.pennyquin.healthframework.dto.AuthenticationDTO;
 import com.pennyquin.healthframework.service.AuthenticationService;
-import com.pennyquin.healthframework.service.impl.AuthenticationServiceImpl;
 import com.pennyquin.openapi.api.AuthApi;
 import com.pennyquin.openapi.model.TokenRequest;
 import com.pennyquin.openapi.model.TokenResponse;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -13,6 +14,9 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 public class AuthenticationController implements AuthApi {
+
+
+    private static final Logger log = LoggerFactory.getLogger(AuthenticationController.class);
 
     @Autowired
     private AuthenticationService authenticationService;
